# VINS-Fusion

./: .dockerignore  .gitignore  README.md  run.sh  run_all_rosario_sequences.sh  run_rosario_sequence.sh  run_vins_fusion.sh
config/rosario/: cam0_pinhole.yaml  cam1_pinhole.yaml  rosario_stereo_config.yaml  rosario_stereo_imu_config.yaml  rosario_stereo_imu_no_td_config.yaml  rosario_stereo_imu_tara_noise_config.yaml
config/zavalla/: cam0.yaml  cam1.yaml  zavalla_config.yaml
docker/: Dockerfile  run.sh
global_fusion/: CMakeLists.txt
global_fusion/src/: globalOpt.cpp  globalOpt.h  globalOptNode.cpp
launch/: play_bag_viz.launch
loop_fusion/src/: pose_graph.cpp
scripts/: build.sh
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: rosario_stereo_imu.launch  zavalla.launch
vins_estimator/src/: rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h
